# discord-music-bot

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  discord-music-bot.service  docker-compose.yml  logging_config.json  music_start.py  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
docs/: POT_PROVIDER_SETUP.md
scripts/: music_start.py
src/discord_music_player/: __init__.py  __main__.py  main.py
src/discord_music_player/application/: __init__.py
src/discord_music_player/application/commands/: __init__.py  clear_queue.py  play_track.py  skip_track.py  stop_playback.py  vote_skip.py
src/discord_music_player/application/interfaces/: __init__.py  ai_client.py  audio_resolver.py  voice_adapter.py
src/discord_music_player/application/queries/: __init__.py  get_current.py  get_queue.py
src/discord_music_player/application/services/: __init__.py  auto_dj.py  follow_mode.py  playback_service.py  queue_models.py  queue_service.py  radio_auto_refill.py  radio_models.py  radio_service.py  requester_leave_autoskip.py  voting_service.py
src/discord_music_player/config/: __init__.py  container.py  settings.py
src/discord_music_player/domain/: __init__.py
src/discord_music_player/domain/music/: __init__.py  entities.py  enums.py  events.py  playback_service.py  queue_service.py  repository.py  services.py  (+2 more)
src/discord_music_player/infrastructure/: __init__.py
src/discord_music_player/utils/: __init__.py  logging.py  playlist_select.py  reply.py  url_extractor.py
tests/: conftest.py  test_admin_cog.py  test_ai_client.py  test_analytics.py  test_apple_music_client.py  test_application_commands.py  test_application_queries.py  test_application_services.py  test_auto_dj.py  test_bot_lifecycle.py  test_cache_repository_coverage.py  test_colored_formatter.py  test_container.py  test_datetime_utils_coverage.py  test_ddd_persistence.py  test_discord_views.py  test_domain_music.py  test_domain_recommendations.py  test_domain_voting.py  test_event_cog.py  test_events_coverage.py  test_exceptions_coverage.py  test_favorites_cog.py  test_favorites_repository.py  test_ffmpeg_player.py  test_follow_mode.py  test_health_cog.py  test_history_repository_coverage.py  test_info_cog.py  test_infrastructure.py  test_main_entrypoint.py  test_message_state_manager.py  test_music_cog.py  test_music_start.py  test_now_playing_cog.py  test_now_playing_view.py  test_playback_cog_branches.py  test_playlist_select.py  test_playlist_view.py  test_queue_cog.py  (+24 more)
(+88 files in other folders)
