[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord_music_player"
version = "0.1.0"
description = "A Discord music bot with AI-powered radio, queue management, and vote skipping."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.2",
    "yt-dlp",
    "bgutil-ytdlp-pot-provider",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pynacl",
    "openai",
    "aiosqlite",
    "matplotlib>=3.8.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
dev = [
    "ruff>=0.1.0",
    "sphinx>=7.0.0",
]

[project.urls]
Repository = "https://github.com/Magic-Man-us/discord-music-bot"

[project.scripts]
discord-music-player = "discord_music_player.main:cli"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:.*audioop.*deprecated.*:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src/discord_music_player"]
omit = ["tests/*", ".venv/*", ".serena/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
# Target Python 3.12+
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Enable rules to catch magic strings
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "G",   # flake8-logging-format (catches logger.info(f"..."))
    "EM",  # flake8-errmsg (catches Exception(f"..."))
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "EM101",  # Exception must not use string literal (we use constants, but tests need it)
    "EM102",  # Exception must not use f-string literal (we use constants, but tests need it)
]

# Exclude test files from some rules
[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "G004",   # Allow f-strings in logging (tests only)
    "EM",     # Allow string literals in exceptions (tests only)
]

# Configure flake8-errmsg to catch exception string literals
[tool.ruff.lint.flake8-errmsg]
max-string-length = 0  # All exception strings should use constants
